Sprint-3 project submission